CIFAR10 first CNN structure

--- a/notebooks/CIFAR_experiments.ipynb
+++ b/notebooks/CIFAR_experiments.ipynb
@@ -2,8 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a7367f79-8298-4bfc-8b8a-83174035d716",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "PROJECT_ROOT = Path.cwd().parent\n",
+    "sys.path.insert(0, str(PROJECT_ROOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "72e4d13a-1381-4b5c-af38-4ec1878acd0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.datasets.cifar_loader import cifar_loader\n",
+    "from src.train import train_SimpleCNN\n",
+    "from src.evaluate import evaluate_SimpleCNN_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "513b5ce8-b353-4dc5-8681-c2d2f83fab65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_SimpleCNN(num_epochs=10, batch_size=64, optimization='sgd', learning_rate=0.08, dataset='cifar')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa3ff0cb-6098-46cd-bfb6-03c5ca91ec72",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -16,7 +52,16 @@
    "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
