CIFAR10 first CNN structure + merge

--- a/notebooks/CIFAR_experiments.ipynb
+++ b/notebooks/CIFAR_experiments.ipynb
@@ -31,7 +31,17 @@
    "execution_count": null,
    "id": "513b5ce8-b353-4dc5-8681-c2d2f83fab65",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/10], Loss: 2.2328\n",
+      "Epoch [2/10], Loss: 2.0141\n",
+      "Epoch [3/10], Loss: 1.8429\n"
+     ]
+    }
+   ],
    "source": [
     "train_SimpleCNN(num_epochs=10, batch_size=64, optimization='sgd', learning_rate=0.08, dataset='cifar')"
    ]
